    Prolog compilers such as ECLiPSe.

    Removed from the built-in object "logtalk" the decompile_predicate_head/4
    and decompile_predicate_indicator/4 deprecated methods.

    Removed support for the long deprecated Logtalk metapredicate/1 directive.

    Corrected a performance bug when caching calls to category predicates where
    the cache entry could be more specific than necessary when working with
    parametric categories.

    Improved caching of "super" calls from within prototypes. Previously, all
    cached entries would be specialized by the value of "self" in order to
    properly deal with the special cases where an object both instantiates and
    specializes other objects.

    Updated the Logtalk compiler to activate any operator declarations found
    on predicate scope directives during the compilation of the entities that
    contain the directives.

    Added a "streamvars" library object, derived from the existing "assignvars"
    library category, featuring support for adding and retrieving terms (which
    may be variables) from a "stream" variable.

    Updated the "coinduction" example, taking advantage of the enhanced
    coinductive/1 directive and broadening the number of individual examples
    that can be run using SICStus Prolog.

    Added a parser for PDDL 3.0 files, contributed by Robert Sasak.


2.43.0 - July 31, 2011

    Added experimental support for Lean Prolog.

    Changed error reporting by the Logtalk compiler and runtime. All exception
    terms now use, whenever possible, the error(Error, logtalk(Goal, Entity))
    format. Changed the internal error checking to use, whenever practical,
    the new '$lgt_must_be'/2-3 internal predicates.

    Added an "optimize" flag, whose default value is "on". This flag allows
    the user to turn off existing optimizations for e.g. debugging tasks (the
    currently implemented optimizations include the removal of redundant calls