@@ -7,9 +7,9 @@
 		<string>lgt</string>
 	</array>
 	<key>foldingStartMarker</key>
-	<string>(/\*|:-\s+(object|protocol|category)(?=[(]))</string>
+	<string>(/\*|:-\s+(if|object|protocol|category)(?=[(]))</string>
 	<key>foldingStopMarker</key>
-	<string>(\*/|:-\s+end_(object|protocol|category)(?=[.]))</string>
+	<string>(\*/|:-\s+(endif|end_(object|protocol|category))(?=[.]))</string>
 	<key>keyEquivalent</key>
 	<string>^~L</string>
 	<key>name</key>
